--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -52,7 +52,6 @@ BETA=0.5
 # Number of particles (IGNORED IN THIS APPLICATION, SUPERSEDED BY "particles_count" below)
 sampleSize=0
 
-
 #---------------------------------------------------------------------------
 # Default "noise" parameters for odometry in observations-only rawlog formats
 #---------------------------------------------------------------------------
@@ -87,14 +86,14 @@ experimentRepetitions=1
 
 # Initial number of particles (if dynamic sample size is enabled, the population may change afterwards).
 #  You can put an array, e.g. "100 200 300", to run the experiment with different number of initial samples:
-particles_count=8000
+particles_count=10000
 
 # 1: Uniform distribution over the range, 0: Uniform distribution over the free cells of the gridmap in the range:
 init_PDF_mode=1
-init_PDF_min_x=-25
-init_PDF_max_x=25
-init_PDF_min_y=-25
-init_PDF_max_y=25
+init_PDF_min_x=-15
+init_PDF_max_x=15
+init_PDF_min_y=-15
+init_PDF_max_y=15
 
 
 SHOW_PROGRESS_3D_REAL_TIME  = true
@@ -106,11 +105,12 @@ SHOW_PROGRESS_3D_REAL_TIME  = true
 # ====================================================
 [MetricMap]
 # Creation of maps:
-occupancyGrid_count=1
+occupancyGrid_count=0
 gasGrid_count=0
 landmarksMap_count=0
 pointsMap_count=0
 beaconMap_count=0
+bearingMap_count=1
 
 # Selection of map for likelihood: (fuseAll=-1,occGrid=0, points=1,landmarks=2,gasGrid=3)
 likelihoodMapSelection=-1
