--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -16,8 +16,8 @@ KLD_binSize_PHI_deg=10
 KLD_binSize_XY=0.10
 KLD_delta=0.01
 KLD_epsilon=0.01
-KLD_maxSampleSize=40000
-KLD_minSampleSize=150
+KLD_maxSampleSize=150
+KLD_minSampleSize=100
 KLD_minSamplesPerBin=0   
 
 #---------------------------------------------------------------------------
@@ -41,7 +41,7 @@ PF_algorithm=0
 resamplingMethod=0
 
 # Set to 1 to enable KLD adaptive sample size:
-adaptiveSampleSize=0
+adaptiveSampleSize=1
 
 # Only for algorithm=3 (pfAuxiliaryPFOptimal)
 pfAuxFilterOptimal_MaximumSearchSamples=10
@@ -71,7 +71,7 @@ minStdPHI    = 2.0     // (degrees)
 map_file=/home/felix/projects/catkin/mrpt/src/mrpt_navigation/mrpt_map/tutorial/constructed_map.multimetricmap
 
 # The source file (RAW-LOG) with action/observation pairs
-rawlog_file=/home/felix/projects/catkin/mrpt/src/mrpt_navigation/mrpt_map/tutorial/robot_standing_asf.rawlog
+rawlog_file=/home/felix/projects/catkin/mrpt/src/mrpt_navigation/mrpt_map/tutorial/robot_moving_asf.rawlog
 
 
 # The directory where the log files will be saved (left in blank if no log is desired)
@@ -86,18 +86,20 @@ experimentRepetitions=1
 
 # Initial number of particles (if dynamic sample size is enabled, the population may change afterwards).
 #  You can put an array, e.g. "100 200 300", to run the experiment with different number of initial samples:
-particles_count=10000
+particles_count=150
 
 # 1: Uniform distribution over the range, 0: Uniform distribution over the free cells of the gridmap in the range:
-init_PDF_mode=1
-init_PDF_min_x=-15
-init_PDF_max_x=15
-init_PDF_min_y=-15
-init_PDF_max_y=15
+init_PDF_mode=0
+init_PDF_min_x=-2
+init_PDF_max_x=0
+init_PDF_min_y=-2
+init_PDF_max_y=0
 
 
 SHOW_PROGRESS_3D_REAL_TIME  = true
 
+bearingsDisabled=false
+skip_iterations=0
 # ====================================================
 #
 #            MULTIMETRIC MAP CONFIGURATION
