--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -16,7 +16,7 @@ KLD_binSize_PHI_deg=10
 KLD_binSize_XY=0.10
 KLD_delta=0.01
 KLD_epsilon=0.01
-KLD_maxSampleSize=150
+KLD_maxSampleSize=5500
 KLD_minSampleSize=100
 KLD_minSamplesPerBin=0   
 
@@ -71,7 +71,7 @@ minStdPHI    = 2.0     // (degrees)
 map_file=/home/felix/projects/catkin/mrpt/src/mrpt_navigation/mrpt_map/tutorial/constructed_map.multimetricmap
 
 # The source file (RAW-LOG) with action/observation pairs
-rawlog_file=/home/felix/projects/catkin/mrpt/src/mrpt_navigation/mrpt_map/tutorial/robot_moving_asf.rawlog
+rawlog_file=/home/felix/projects/catkin/mrpt/src/mrpt_navigation/mrpt_map/tutorial/robot_moving_unfiltered_asf.rawlog
 
 
 # The directory where the log files will be saved (left in blank if no log is desired)
@@ -86,20 +86,21 @@ experimentRepetitions=1
 
 # Initial number of particles (if dynamic sample size is enabled, the population may change afterwards).
 #  You can put an array, e.g. "100 200 300", to run the experiment with different number of initial samples:
-particles_count=150
+particles_count=5500
 
 # 1: Uniform distribution over the range, 0: Uniform distribution over the free cells of the gridmap in the range:
-init_PDF_mode=0
-init_PDF_min_x=-2
-init_PDF_max_x=0
-init_PDF_min_y=-2
-init_PDF_max_y=0
+init_PDF_mode=1
+init_PDF_min_x=-2.5
+init_PDF_max_x=-4.2
+init_PDF_min_y=0.5
+init_PDF_max_y=2
 
 
 SHOW_PROGRESS_3D_REAL_TIME  = true
 
 bearingsDisabled=false
-skip_iterations=0
+skip_iterations=1
+idle_factor=4
 # ====================================================
 #
 #            MULTIMETRIC MAP CONFIGURATION
@@ -168,7 +169,10 @@ consensus_pow=1
 # ====================================================
 # Insertion Options for BearingMap 00:
 [MetricMap_bearingMap_00_likelihoodOpts]
-rangetStd=0.08
+rangetStd=0.20
+yawStd=0.25
+rangeOnly=true
 
 [MetricMap_bearingMap_00_insertOpts]
-insertAsMonteCarlo=true
+insertAsMonteCarlo=false
+insertAsNoPDF=true
