Visualizations added for debugging.

--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -171,7 +171,7 @@ consensus_pow=1
 [MetricMap_bearingMap_00_likelihoodOpts]
 rangetStd=0.20
 yawStd=0.25
-rangeOnly=true
+rangeOnly=false
 
 [MetricMap_bearingMap_00_insertOpts]
 insertAsMonteCarlo=false
