loadconfigfile for bearingmap correct.

--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -98,7 +98,7 @@ init_PDF_max_y=2
 
 SHOW_PROGRESS_3D_REAL_TIME  = true
 
-bearingsDisabled=false
+bearingsDisabled=true
 skip_iterations=1
 idle_factor=4
 # ====================================================
@@ -171,7 +171,7 @@ consensus_pow=1
 [MetricMap_bearingMap_00_likelihoodOpts]
 rangetStd=0.20
 yawStd=0.25
-rangeOnly=false
+rangeOnly=true
 
 [MetricMap_bearingMap_00_insertOpts]
 insertAsMonteCarlo=false
