--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -16,7 +16,7 @@ KLD_binSize_PHI_deg=10
 KLD_binSize_XY=0.10
 KLD_delta=0.01
 KLD_epsilon=0.01
-KLD_maxSampleSize=120
+KLD_maxSampleSize=100
 KLD_minSampleSize=10
 KLD_minSamplesPerBin=0   
 
@@ -88,7 +88,7 @@ experimentRepetitions=1
 
 # Initial number of particles (if dynamic sample size is enabled, the population may change afterwards).
 #  You can put an array, e.g. "100 200 300", to run the experiment with different number of initial samples:
-particles_count=50
+particles_count=100
 
 # 1: Uniform distribution over the range, 0: Uniform distribution over the free cells of the gridmap in the range:
 init_PDF_mode=1
@@ -102,7 +102,7 @@ SHOW_PROGRESS_3D_REAL_TIME  = true
 
 bearingsDisabled=false
 skip_iterations=1
-idle_factor=1000000
+idle_factor=1
 # ====================================================
 #
 #            MULTIMETRIC MAP CONFIGURATION
@@ -173,7 +173,7 @@ consensus_pow=1
 [MetricMap_bearingMap_00_likelihoodOpts]
 rangetStd=0.20
 yawStd=0.25
-rangeOnly=false
+rangeOnly=true
 
 [MetricMap_bearingMap_00_insertOpts]
 insertAsMonteCarlo=false
