WIP bearing initialization.

--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -99,10 +99,11 @@ init_PDF_max_y=20
 
 
 SHOW_PROGRESS_3D_REAL_TIME  = true
+SHOW_PROGRESS_3D_REAL_TIME_DELAY_MS = 1
 
 bearingsDisabled=false
 skip_iterations=1
-idle_factor=1
+idle_factor=100000000
 # ====================================================
 #
 #            MULTIMETRIC MAP CONFIGURATION
