--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -16,7 +16,7 @@ KLD_binSize_PHI_deg=10
 KLD_binSize_XY=0.10
 KLD_delta=0.01
 KLD_epsilon=0.01
-KLD_maxSampleSize=100
+KLD_maxSampleSize=4000
 KLD_minSampleSize=10
 KLD_minSamplesPerBin=0   
 
@@ -52,7 +52,7 @@ BETA=0.5
 # Number of particles (IGNORED IN THIS APPLICATION, SUPERSEDED BY "particles_count" below)
 sampleSize=0
 
-particleInjection=true
+particleInjection=false
 
 #---------------------------------------------------------------------------
 # Default "noise" parameters for odometry in observations-only rawlog formats
@@ -88,14 +88,14 @@ experimentRepetitions=1
 
 # Initial number of particles (if dynamic sample size is enabled, the population may change afterwards).
 #  You can put an array, e.g. "100 200 300", to run the experiment with different number of initial samples:
-particles_count=100
+particles_count=4000
 
 # 1: Uniform distribution over the range, 0: Uniform distribution over the free cells of the gridmap in the range:
-init_PDF_mode=1
-init_PDF_min_x=-20
-init_PDF_max_x=20
-init_PDF_min_y=-20
-init_PDF_max_y=20
+init_PDF_mode=0
+init_PDF_min_x=-5
+init_PDF_max_x=-3
+init_PDF_min_y=0
+init_PDF_max_y=2.5
 
 
 SHOW_PROGRESS_3D_REAL_TIME  = true
@@ -103,7 +103,7 @@ SHOW_PROGRESS_3D_REAL_TIME_DELAY_MS = 1
 
 bearingsDisabled=false
 skip_iterations=1
-idle_factor=100000000
+idle_factor=10
 # ====================================================
 #
 #            MULTIMETRIC MAP CONFIGURATION
