--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -16,8 +16,8 @@ KLD_binSize_PHI_deg=10
 KLD_binSize_XY=0.10
 KLD_delta=0.01
 KLD_epsilon=0.01
-KLD_maxSampleSize=4000
-KLD_minSampleSize=10
+KLD_maxSampleSize=5500
+KLD_minSampleSize=100
 KLD_minSamplesPerBin=0   
 
 #---------------------------------------------------------------------------
@@ -51,8 +51,6 @@ BETA=0.5
 
 # Number of particles (IGNORED IN THIS APPLICATION, SUPERSEDED BY "particles_count" below)
 sampleSize=0
-
-particleInjection=false
 
 #---------------------------------------------------------------------------
 # Default "noise" parameters for odometry in observations-only rawlog formats
@@ -88,22 +86,23 @@ experimentRepetitions=1
 
 # Initial number of particles (if dynamic sample size is enabled, the population may change afterwards).
 #  You can put an array, e.g. "100 200 300", to run the experiment with different number of initial samples:
-particles_count=4000
+particles_count=5500
 
 # 1: Uniform distribution over the range, 0: Uniform distribution over the free cells of the gridmap in the range:
-init_PDF_mode=0
-init_PDF_min_x=-5
-init_PDF_max_x=-3
-init_PDF_min_y=0
-init_PDF_max_y=2.5
+init_PDF_mode=1
+init_PDF_min_x=-2.5
+init_PDF_max_x=-4.2
+init_PDF_min_y=0.5
+init_PDF_max_y=2
 
 
 SHOW_PROGRESS_3D_REAL_TIME  = true
-SHOW_PROGRESS_3D_REAL_TIME_DELAY_MS = 1
+SHOW_PROGRESS_3D_REAL_TIME_DELAY_MS=50000
 
+particleInjection=true
 bearingsDisabled=false
 skip_iterations=1
-idle_factor=10
+idle_factor=4
 # ====================================================
 #
 #            MULTIMETRIC MAP CONFIGURATION
@@ -174,7 +173,7 @@ consensus_pow=1
 [MetricMap_bearingMap_00_likelihoodOpts]
 rangetStd=0.20
 yawStd=0.25
-rangeOnly=true
+rangeOnly=false
 
 [MetricMap_bearingMap_00_insertOpts]
 insertAsMonteCarlo=false
