--- a/share/mrpt/config_files/pf-localization/localization_bearings.ini
+++ b/share/mrpt/config_files/pf-localization/localization_bearings.ini
@@ -16,7 +16,7 @@ KLD_binSize_PHI_deg=10
 KLD_binSize_XY=0.10
 KLD_delta=0.01
 KLD_epsilon=0.01
-KLD_maxSampleSize=70
+KLD_maxSampleSize=2500
 KLD_minSampleSize=50
 KLD_minSamplesPerBin=0   
 
@@ -68,11 +68,10 @@ minStdPHI    = 2.0     // (degrees)
 
 # The map in the ".simplemap" format or just a ".gridmap" (the program detects the file extension)
 # This map is used to localize the robot within it:
-map_file=/home/felix/projects/catkin/mrpt/src/mrpt_navigation/mrpt_map/tutorial/constructed_map.multimetricmap
+map_file=/home/felix/projects/catkin/tuw/src/mrpt_navigation/mrpt_map/tutorial/constructed_map.multimetricmap
 
 # The source file (RAW-LOG) with action/observation pairs
-rawlog_file=/home/felix/projects/catkin/mrpt/src/mrpt_navigation/mrpt_map/tutorial/robot_moving_filtered_asf.rawlog
-
+rawlog_file=/home/felix/projects/catkin/tuw/src/mrpt_navigation/mrpt_map/tutorial/door_detection_l1_asf.rawlog
 
 # The directory where the log files will be saved (left in blank if no log is desired)
 logOutput_dir=LOG_LOCALIZATION
@@ -86,22 +85,29 @@ experimentRepetitions=1
 
 # Initial number of particles (if dynamic sample size is enabled, the population may change afterwards).
 #  You can put an array, e.g. "100 200 300", to run the experiment with different number of initial samples:
-particles_count=70
+particles_count=2500
 
 # 1: Uniform distribution over the range, 0: Uniform distribution over the free cells of the gridmap in the range:
-init_PDF_mode=1
-init_PDF_min_x=-2.5
-init_PDF_max_x=-4.2
-init_PDF_min_y=0.5
+init_PDF_mode=0
+#a lab
+#init_PDF_min_x=-2.5
+#init_PDF_max_x=-4.2
+#init_PDF_min_y=0.5
+#init_PDF_max_y=2
+
+#roblab in front
+init_PDF_min_x=-1
+init_PDF_max_x=1
+init_PDF_min_y=-2
 init_PDF_max_y=2
 
-
 SHOW_PROGRESS_3D_REAL_TIME  = true
-SHOW_PROGRESS_3D_REAL_TIME_DELAY_MS=0
+SHOW_PROGRESS_3D_REAL_TIME_DELAY_MS=5000
 
-particleInjection=true
+particleInjection=false
 bearingsDisabled=false
-skip_iterations=8
+skip_iterations=1
+skipSeconds=35
 idle_factor=2
 # ====================================================
 #
@@ -173,7 +179,7 @@ consensus_pow=1
 [MetricMap_bearingMap_00_likelihoodOpts]
 rangetStd=0.20
 yawStd=0.25
-rangeOnly=false
+rangeOnly=true
 
 [MetricMap_bearingMap_00_insertOpts]
 insertAsMonteCarlo=false
